[gd_scene load_steps=2 format=3 uid="uid://s1qstasvpebr"]

[ext_resource type="Script" uid="uid://3yyj0s6pxqkk" path="res://scripts/HelpPopup.gd" id="1_loubu"]

[node name="HelpPopup" type="PopupPanel"]
oversampling_override = 1.0
size = Vector2i(260, 100)
visible = true
script = ExtResource("1_loubu")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 256.0
offset_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Таблица третьих карт Банкира"
horizontal_alignment = 1

[node name="TableGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 9

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "× Закрыть"
